--- a/index.html
+++ b/index.html
@@ -1152,8 +1152,8 @@
         return;
     }
 
-    if (!formData.selectedhighschool) {
-        alert('メニューを選択してください。');
+    if (!formData.selecthighschool) {
+        alert('高校生以下ですか？を選択してください。');
         return;
     }
 
