--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
         return;
     }
 
-    if (!formData.selecthighschool) {
+    if (!formData.highschoolCount) {
         alert('高校生以下ですか？を選択してください。');
         return;
     }
