--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #13ca5e;
+            background-color: #262626;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #111111;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -385,7 +385,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #005ea6;
+            background-color: #262626;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -416,9 +416,7 @@
 
 <body>
     <div class="container">
-        <h1>≪予約フォームA_カレンダー改造用≫<br>名前<br>電話<br>番号<br>ご来店回数<br>
-            【メニュー欄】<br>・メニューは1つだけ選択できる
-            <br>オプションは複数選択できる<br>予約フォーム
+        <h1>Alizeti<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -428,111 +426,75 @@
 
         <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ブライダルコース</button>
-            <button type="button" onclick="showMenu('female')">シェービングコース</button>
-            <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
+            <button type="button" onclick="showMenu('male')">ハンドジェルネイル</button>
+            <button type="button" onclick="showMenu('female')">フットジェルネイル</button>
+            <button type="button" onclick="showMenu('whitening')">フットケア</button>
         </div>
 
         <div id="treatment-text" style="margin-bottom: 20px;"></div>
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ブライダルコース◆</span>
+                <span class="highlight-text">◆ハンドジェルネイル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')"
-                    data-price="15000">洋装プランA〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')"
-                    data-price="15000">洋装プランB〈120分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')"
-                    data-price="15000">洋装プランC〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">ワンカラー</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">マグネットワンカラー</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">グラデーション</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">ラメグラデーション</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">フレンチ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">持ち込みデザイン（２時間内）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">おまかせデザイン（２時間内）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">持ち込みデザイン（２時間２０分内）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">おまかせデザイン（２時間２０分内）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">持ち込みしっかりデザイン</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">スカルプ10本</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">ケアマニキュア</button>
             </div>
             <div class="highlight-background">
-                <span class="highlight-text">ブライダルコース：オプション</span>
+                <span class="highlight-text">ハンドジェルネイル：オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">ベーシックマッサージ</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">リラックスマッサージ</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ジェルオフ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">スカルプオフ</button>
             </div>
         </div>
 
         <div id="female" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆シェービングコース◆</span>
+                <span class="highlight-text">◆フットジェルネイル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')"
-                    data-price="15000">リラックスコース〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')"
-                    data-price="15000">ベーシックコース〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')"
-                    data-price="15000">スピードコース〈90分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ワンカラー</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">マグネットワンカラー</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">グラデーション</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ラメグラデーション</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">フレンチ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">持ち込みデザイン（２時間内）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">おまかせデザイン（２時間内）</button>
             </div>
             <div class="highlight-background">
-                <span class="highlight-text">シェービングコース：オプション</span>
+                <span class="highlight-text">フットジェルネイル：オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">美白パック〈30分〉</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ジェルオフ</button>
             </div>
         </div>
 
         <div id="whitening" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆マッサージコース◆</span>
+                <span class="highlight-text">◆フットケア◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')"
-                    data-price="15000">リラックスマッサージ〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')"
-                    data-price="15000">ベーシックマッサージ〈30分〉</button>
-            </div>
-            <div class="highlight-background">
-                <span class="highlight-text">マッサージコース：オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">美白パック〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">ケアマニキュア</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">角質除去</button>
             </div>
         </div>
 
@@ -604,36 +566,35 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目〈30分〉': 30,
-            '2回目以降〈0分〉': 0
+            '1回目': 0,
+            '2回目以降': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '眉カット〈30分〉': 30,
-            '襟足〈30分〉': 30,
-            '背中(キャミソールライン)〈30分〉': 30,
-            '背中(腰まで)〈30分〉': 30,
-            'デコルテ〈30分〉': 30,
-            '腕〈30分〉': 30,
-            '保湿パック〈30分〉': 30,
-            'ベーシックマッサージ(パック付き)〈30分〉': 30,
-            'リラックスマッサージの(パック付き)〈30分〉': 30,
-            '美白パック〈30分〉': 30
+            'ジェルオフ': 40,
+            'スカルプオフ': 60
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '和装プラン〈30分〉': 30,
-            '洋装プランA〈60分〉': 60,
-            '洋装プランB〈120分〉': 420,
-            '洋装プランC〈30分〉': 30,
-            'リラックスコース〈60分〉': 60,
-            'ベーシックコース〈30分〉': 30,
-            'スピードコース〈90分〉': 90
+            'ワンカラー': 30,
+            'マグネットワンカラー': 60,
+            'グラデーション': 420,
+            'ラメグラデーション': 30,
+            'フレンチ': 60,
+            '持ち込みデザイン（２時間内）': 30,
+            'おまかせデザイン（２時間内）': 30,
+            '持ち込みデザイン（２時間２０分内）': 60,
+            'おまかせデザイン（２時間２０分内）': 420,
+            '持ち込みしっかりデザイン': 30,
+            'スカルプ10本': 60,
+            'ケアマニキュア': 30,
+            'ケアマニキュア': 30,
+            '角質除去': 60
         };
 
 
@@ -642,10 +603,11 @@
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
             const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
+            const selectedMenuText = selectedMenu ? `・<span style="color:red;"><strong>コース</strong></span>：${selectedMenu}` : '・コースが未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:red;"><strong>【メニュー】</strong></span><br>${selectedSymptom.join('<br>')}`
+                ? `<span style="color:red;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
@@ -673,15 +635,13 @@
         <hr>
         <p>${visitCountText}</p>
         <hr>
+        <p>${selectedMenuText}</p>
+        <hr>
         <p>${selectedSymptomText}</p>
         <hr>
         <p>${irradiationsText}</p>
         <hr>
-        <p>${totalTimeText}</p>
-        <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -689,6 +649,9 @@
         // 各ボタンや入力フィールドでupdateDisplayInfoを呼び出すようにする
         document.getElementById('name').addEventListener('input', updateDisplayInfo);
         document.querySelectorAll('.visit-buttons button').forEach(button => {
+            button.addEventListener('click', updateDisplayInfo);
+        });
+        document.querySelectorAll('.menu-sections button').forEach(button => {
             button.addEventListener('click', updateDisplayInfo);
         });
         document.querySelectorAll('.symptoms button').forEach(button => {
@@ -854,44 +817,44 @@
         }
 
         function showMenu(menu) {
-    // 選択されたメニューの名前を取得
-    let selectedButton = document.querySelector(`.menu-sections button[onclick="showMenu('${menu}')"]`);
-    if (selectedButton) {
-        selectedMenu = selectedButton.innerText;
-    }
+            // 選択されたメニューの名前を取得
+            let selectedButton = document.querySelector(`.menu-sections button[onclick="showMenu('${menu}')"]`);
+            if (selectedButton) {
+                selectedMenu = selectedButton.innerText;
+            }
 
-    // すべてのメニューボタンの選択状態をリセット
-    document.querySelectorAll('.menu-sections button').forEach(button => {
-        button.classList.remove('active');
-    });
+            // すべてのメニューボタンの選択状態をリセット
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                button.classList.remove('active');
+            });
 
-    // 選択されたメニューセクションを表示
-    document.querySelectorAll('.menu-section').forEach(section => {
-        section.classList.remove('active');
-        section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
-    });
+            // 選択されたメニューセクションを表示
+            document.querySelectorAll('.menu-section').forEach(section => {
+                section.classList.remove('active');
+                section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
+            });
 
-    // 対応するメニューボタンを選択状態にする
-    if (selectedButton) {
-        selectedButton.classList.add('active');
-    }
+            // 対応するメニューボタンを選択状態にする
+            if (selectedButton) {
+                selectedButton.classList.add('active');
+            }
 
-    // 選択されたメニューセクションを表示
-    document.getElementById(menu).classList.add('active');
+            // 選択されたメニューセクションを表示
+            document.getElementById(menu).classList.add('active');
 
-    // `treatment-text` の内容をリセット
-    document.getElementById("treatment-text").innerHTML = "";
+            // `treatment-text` の内容をリセット
+            document.getElementById("treatment-text").innerHTML = "";
 
-    // メニューとオプションをリセット
-    selectedSymptom = '';      // メニューのリセット
-    irradiationsCount = '';    // オプションのリセット
-    menuPrice = 0;             // メニューの価格リセット
-    optionsPrice = 0;          // オプションの価格リセット
-    totalAmount = 0;           // 合計金額リセット
+            // メニューとオプションをリセット
+            selectedSymptom = '';      // メニューのリセット
+            irradiationsCount = '';    // オプションのリセット
+            menuPrice = 0;             // メニューの価格リセット
+            optionsPrice = 0;          // オプションの価格リセット
+            totalAmount = 0;           // 合計金額リセット
 
-    // 表示を更新
-    updateDisplayInfo();
-}
+            // 表示を更新
+            updateDisplayInfo();
+        }
 
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
@@ -954,7 +917,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n選んだコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -1155,7 +1118,7 @@
                         cell.classList.add('unavailable');
                     }
                     // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
+                    else if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
