--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
     // LINEトークにメッセージを送信
     liff.sendMessages([{
         type: 'text',
-        text: `【予約フォーム】\n希望占い：${formData.visitCount}\n\n何を占いたいですか？：${formData.highschoolCount}\n\n【生年月日】：\n・生年月日\n${formatDate(formData.dates[0])}\n\nメッセージ：${formData.message}`
+        text: `【予約フォーム】\n【希望占い】\n⇒${formData.visitCount}\n\n【何を占いたいですか？】\n⇒${formData.highschoolCount}\n\n【生年月日】\n⇒${formatDate(formData.dates[0])}\n\n【メッセージ】\n⇒${formData.message}`
     }]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
         liff.closeWindow();
