--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         </div>
 
         <div class="highlight-background">
-            <span class="highlight-text">生年月日<br>"2025年"をタップすれば楽に年を選べます</span>
+            <span class="highlight-text">生年月日<br>"2025年"をタップすれば楽に年を選べますbr（時間は入力不要です）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -1069,7 +1069,7 @@
     // LINEトークにメッセージを送信
     liff.sendMessages([{
         type: 'text',
-        text: `【予約フォーム】\n【希望占い】\n⇒${formData.visitCount}\n\n【何を占いたいですか？】\n⇒${formData.highschoolCount}\n\n【生年月日】\n⇒${formatDate(formData.dates[0])}\n\n【メッセージ】\n⇒${formData.message}`
+        text: `【占いフォーム】\n【希望占い】\n⇒${formData.visitCount}\n\n【何を占いたいですか？】\n⇒${formData.highschoolCount}\n\n【生年月日】\n⇒${formatDate(formData.dates[0])}\n\n【メッセージ】\n⇒${formData.message}`
     }]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
         liff.closeWindow();
@@ -1089,7 +1089,7 @@
             const day = ('0' + date.getDate()).slice(-2);
             const hours = ('0' + date.getHours()).slice(-2);
             const minutes = ('0' + date.getMinutes()).slice(-2);
-            return `${year}年${month}月${day}日 ${hours}:${minutes}`;
+            return `${year}年${month}月${day}日 `;
         }
 
         async function fetchAvailability(date) {
