--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #88705a;
+            background-color: #7f0019;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,112 +106,109 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #88705a;
+            background-color: #06c755;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
         }
 
-        .calendar-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            /* カレンダーを中央に配置 */
-            margin-bottom: 20px;
-            position: relative;
-            width: 106%;
-            /* 横幅を広げる */
-            margin-left: -7%;
-            /* 親要素の中心にカレンダーを配置 */
-        }
+.calendar-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    position: relative;
+    width: 100%;
+}
 
-        .calendar {
-            flex: 1;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            /* 横スクロールを防ぐ */
-            width: 106%;
-        }
+.calendar {
+    flex: 1;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 100%;
+}
 
-        .calendar table {
-            width: 100%;
-            border-collapse: collapse;
-        }
+.calendar table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed; /* セル幅を均等にする */
+}
 
-        .calendar th,
-        .calendar td {
-            text-align: center;
-            padding: 5px;
-            cursor: pointer;
-            vertical-align: top;
-            width: 14.28%;
-            /* 7日間が一列に収まるように設定 */
-            box-sizing: border-box;
-            border: 1px solid #000;
-            /* ここで区切り線を追加 */
-        }
+.calendar th,
+.calendar td {
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+    vertical-align: top;
+    width: auto; /* 通常のセルは自動調整 */
+    box-sizing: border-box;
+    border: 1px solid #000;
+}
 
-        .calendar th {
-            background-color: #f7f7f7;
-            /* カレンダーのヘッダー部分の背景色を薄いグレーに設定 */
-        }
+/* 左端のセルだけ幅を少し広げる */
+.calendar th:first-child,
+.calendar td:first-child {
+    width: 16%;
+}
 
-        .calendar td:hover {
-            background-color: #ddd;
-            /* カレンダーのセルにマウスを乗せたときの背景色を少し濃いグレーに設定 */
-        }
+.calendar th {
+    background-color: #f7f7f7;
+}
 
-        .calendar td.selected {
-            background-color: #13ca5e;
-            /* 選択されたカレンダーのセルの背景色を緑色に設定 */
-            color: #fff;
-            /* 選択されたセルのテキスト色を白に設定 */
-        }
+.calendar td:hover {
+    background-color: #ddd;
+}
 
-        .week-button-container {
-            display: flex;
-            /* 子要素を横方向に並べるためにflexboxを使用 */
-            justify-content: space-between;
-            /* 子要素を左右に均等に配置 */
-            align-items: center;
-            /* 子要素を縦方向の中央に揃える */
-            width: 100%;
-            /* コンテナの幅を100%に設定 */
-            margin-bottom: 10px;
-            /* 下に10pxのマージンを追加 */
-        }
+.calendar td.selected {
+    background-color: #13ca5e;
+    color: #fff;
+}
 
-        .week-button {
-            padding: 10px 20px;
-            /* 上下10px、左右20pxの内側の余白を追加 */
-            background-color: #444;
-            /* ボタンの背景色を濃いグレーに設定 */
-            color: #fff;
-            /* ボタンのテキスト色を白に設定 */
-            border: none;
-            /* ボタンの境界線を削除 */
-            border-radius: 4px;
-            /* ボタンの角を4pxの半径で丸める */
-            cursor: pointer;
-            /* マウスカーソルをポインター（指の形）に変更 */
-            margin-left: 31px;
-            /* 左側に20pxの余白を追加して右にずらす */
-        }
+.week-button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
 
-        .current-month {
-            font-size: 14px;
-            /* フォントサイズを16pxに設定 */
-            font-weight: bold;
-            /* テキストを太字に設定 */
-            color: #444;
-            /* テキストの色を濃いグレーに設定 */
-            margin-left: 30px;
-            /* 10pxだけ右にずらす */
-        }
+.week-button {
+    padding: 10px 20px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.month-button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.month-button {
+    padding: 10px 20px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.current-month {
+    font-size: 16px;
+    font-weight: bold;
+    color: #444;
+    margin-top: 10px; /* 下にずらす */
+    display: inline-block; /* margin-top を適用しやすくする */
+}
 
         .loading-spinner {
             position: fixed;
@@ -330,39 +327,36 @@
 
         .info-text {
             margin-top: 20px;
-            /* 上の余白 */
-            margin-bottom: 10px;
-            /* 下に白い隙間を追加 */
+            /* 下にずらすスペース */
             font-size: 13px;
+            /* 読みやすいサイズ */
             color: #000000;
+            /* 説明文らしい落ち着いた色 */
             line-height: 1.5;
+            /* テキスト間の高さを適切に設定 */
             text-align: center;
+            /* 中央揃え */
             word-wrap: break-word;
-            background-color: #eef9f5;
-            /* 青っぽい背景色を追加 */
-            padding: 10px;
-            border-radius: 4px;
+            /* 長いテキストの折り返しを強制 */
         }
 
         /* 携帯端末向けのレスポンシブデザイン */
         @media (max-width: 768px) {
             .info-text {
-                font-size: 11.5px;
+                font-size: 10px;
                 /* スマホでは少し小さく */
-                margin-top: 10px;
+                margin-top: 15px;
                 /* 上下のマージンを調整 */
-                line-height: 2.0;
+                line-height: 1.4;
                 /* テキストの高さ調整 */
             }
         }
-        
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>YOSAPARK feliz<br>予約フォーム
-        </h1>
+        <h1>開運いすずサロン<br>電話占い予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -378,10 +372,8 @@
         <div class="label">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">極上プレミアムコース</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">痩身脂肪燃焼コース</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">水素まみれコース</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">ペアで痩身コース</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">電話占い新規様15000円</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="10000">電話占いリピーター様10000円</button>
         </div>
 
         <div class="label">希望日時</div>
@@ -439,7 +431,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: ''
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -451,7 +443,7 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目': 20,
+            '1回目': 0,
             '2回目以降': 0
         };
 
@@ -459,16 +451,14 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            'ベーシックマッサージ(パック付き)〈30分〉': 0
+            '眉カット〈30分〉': 0
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '極上プレミアムコース': 150,
-            '痩身脂肪燃焼コース': 150,
-            '水素まみれコース': 150,
-            'ペアで痩身コース': 150
+            '電話占い新規様15000円': 90,
+            '電話占いリピーター様10000円': 90
         };
 
 
@@ -504,13 +494,17 @@
 
             // displayInfo要素に情報を表示
             document.getElementById('displayInfo').innerHTML = `
-        <p>・<span style="color:#13ca5e;"><strong>お名前</strong></span>：${name}</p>
+        <p>・<span style="color:red;"><strong>お名前</strong></span>：${name}</p>
         <hr>
         <p>${visitCountText}</p>
         <hr>
         <p>${selectedSymptomText}</p>
         <hr>
+        <p>${totalTimeText}</p>
+        <hr>
         <p>${selectedDateText}</p>
+        <hr>
+        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -741,10 +735,10 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【電話予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+                alert('当日キャンセルは無いようにお願いいたします。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
@@ -773,7 +767,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycby1KsY23a8hZBR9PMiH7-vLXR8XV0jyloplY1PqgUxeIcgHp_euGWddlTltLULs8GrW/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -806,7 +800,6 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:00', '09:30',
                 '10:00', '10:30',
                 '11:00', '11:30',
                 '12:00', '12:30',
@@ -817,7 +810,7 @@
                 '17:00', '17:30',
                 '18:00', '18:30',
                 '19:00', '19:30',
-                '20:00'
+                '20:00', '20:30', '21:00'
             ];
 
             if (table.rows.length === 0) {
@@ -894,6 +887,17 @@
                         continue;
                     }
 
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 21 && slotEnd.getMinutes() > 00) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 21) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
+
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
                     if (slotStart < now) {
@@ -934,6 +938,18 @@
                     }
                     // 営業日で、指定されている時間以外の時間は×
                     else if (businessEventTimes.length > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+                    // 月・水の15:01~19:29は✕にする（優先的にチェック）
+                    if ((slotStart.getDay() === 1 || slotStart.getDay() === 3) && 
+                        (slotStart.getHours() > 15 || (slotStart.getHours() === 15 && slotStart.getMinutes() >= 0)) &&
+                        (slotStart.getHours() < 19 || (slotStart.getHours() === 19 && slotStart.getMinutes() <= 29))) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+                    // 日曜日、火曜日、木曜日、金曜日、土曜日で、営業日ではない場合
+                    else if ([0, 2, 4, 5, 6].includes(slotStart.getDay()) && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
