--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
     border: 1px solid #000;
 }
 
+.calendar td {
+    font-size: 12px; /* お好みのサイズに変更 */
+}
+
 /* 左端のセルだけ幅を少し広げる */
 .calendar th:first-child,
 .calendar td:first-child {
