--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
     font-size: 12px; /* お好みのサイズに変更 */
 }
 
+.calendar th {
+    text-align: left; /* 左寄せにする */
+    padding-left: 5px; /* 左に少し余白を作る */
+}
+
 /* 左端のセルだけ幅を少し広げる */
 .calendar th:first-child,
 .calendar td:first-child {
