--- a/index.html
+++ b/index.html
@@ -219,6 +219,19 @@
     display: inline-block; /* margin-top を適用しやすくする */
 }
 
+@media screen and (max-width: 768px) {
+    .calendar th {
+        text-align: center; /* 中央揃え */
+        padding-left: 0; /* 左寄せを解除 */
+        font-size: 12px; /* 文字サイズを少し小さく */
+    }
+
+    .calendar td {
+        text-align: center; /* 中央揃え */
+        font-size: 12px; /* セルの文字サイズも調整 */
+        padding: 3px; /* 余白を減らしてコンパクトに */
+    }
+
         .loading-spinner {
             position: fixed;
             /* 画面全体に対応 */
