--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
     display: inline-block; /* margin-top を適用しやすくする */
 }
 
+    .calendar th {
+        text-align: center; /* 中央揃え */
+        padding-left: 0; /* 左寄せを解除 */
+        font-size: 12px; /* 文字サイズを少し小さく */
+    }
+
     .calendar td {
         text-align: center; /* 中央揃え */
         font-size: 12px; /* セルの文字サイズも調整 */
