--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #ff9ccd;
+            background-color: #88705a;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -119,7 +119,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ec87cc;
+            background-color: #88705a;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -369,7 +369,7 @@
                 message,
                 message2,
                 priorityCount,
-                demandCount,
+                demandCount: demandCount.join('\n・') // 改行区切りにする
             };
 
             // フォームデータのチェック
