--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script> <!-- LIFF SDKの読み込み -->
     <script>
         let priorityCount = '';
-        let demandCount = '';
+        let demandCount = [];
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
