--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #005ea6;
+            background-color: #88705a;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -119,7 +119,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #3971c0;
+            background-color: #322a25;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -258,52 +258,99 @@
 
 <body>
     <div class="container">
-        <h1>南星運転代行<br>アンケートフォーム</h1>
+        <h1>Andova<br>カウンセリングシート</h1>
         <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
-
-        <div class="label">お名前(漢字フルネーム)</div>
+        <div class="label">ご来店日(例:西暦記載 ○年○月○日)</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">お名前(ふりがな)</div>
+        <div class="label">お名前(漢字フルネーム)</div>
         <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">県内or県外</div>
+        <div class="label">お名前(ふりがな)</div>
+        <textarea id="message6" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">生年月日(例:西暦記載 ○年○月○日)</div>
+        <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">電話番号</div>
+        <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">お住まい(都道府県/市区町村まで)</div>
+        <textarea id="message5" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">ご職業</div>
         <div class="priority-buttons">
-            <button type="button" id="onepriority" onclick="selectpriority(this)">島内</button>
-            <button type="button" id="twopriority" onclick="selectpriority(this)">県外</button>
+            <button type="button" id="onepriority" onclick="selectpriority(this)"> 会社員（職業）</button>
+            <button type="button" id="twopriority" onclick="selectpriority(this)">パート・アルバイト（職業）</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">学生（職業）</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">専業主婦（職業）</button>
+            <button type="button" id="fivepriority" onclick="selectpriority(this)">その他（職業）</button>
         </div>
 
-        <div class="label">性別を教えてください</div>
+        <div class="label">来店動機</div>
+        <div class="demand-buttons">
+            <button type="button" id="onedemand" onclick="selectdemand(this)">HP（来店動機）</button>
+            <button type="button" id="twodemand" onclick="selectdemand(this)"> Instagram（来店動機）</button>
+            <button type="button" id="threedemand" onclick="selectdemand(this)">Google等での検索（来店動機）</button>
+            <button type="button" id="fourdemand" onclick="selectdemand(this)">ホットペッパービューティー（来店動機）</button>
+            <button type="button" id="fivedemand" onclick="selectdemand(this)">知人の紹介（来店動機）</button>
+            <button type="button" id="sixdemand" onclick="selectdemand(this)">通りすがり（来店動機）</button>
+            <button type="button" id="sevemdemand" onclick="selectdemand(this)">その他（来店動機）</button>
+        </div>
+
+        <div class="label">"知人の紹介"を選択された方は、<br>紹介者のお名前をご記入ください。</div>
+        <textarea id="message7" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">来店頻度<br>(ネイルサロンにどのくらいの頻度で通っているか)</div>
         <div class="chance-buttons">
-            <button type="button" id="onechance" onclick="selectchance(this)">男性</button>
-            <button type="button" id="twochance" onclick="selectchance(this)">女性</button>
-            <button type="button" id="threechance" onclick="selectchance(this)">その他</button>
+            <button type="button" id="onechance" onclick="selectchance(this)">2週間に1度(頻度)</button>
+            <button type="button" id="twochance" onclick="selectchance(this)">3週間に1度(頻度)</button>
+            <button type="button" id="threechance" onclick="selectchance(this)">1ヵ月に1度(頻度) </button>
+            <button type="button" id="fourchance" onclick="selectchance(this)">2〜3カ月に1度(頻度)</button>
         </div>
 
-        <div class="label">誕生月を教えてください</div>
+        <div class="label">過去施術<br>(過去にサロンで受けたことがある施術)</div>
         <div class="Introduction-buttons">
-            <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">1月</button>
-            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">2月</button>
-            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">3月</button>
-            <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">4月</button>
-            <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">5月</button>
-            <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">6月</button>
-            <button type="button" id="sevenIntroduction" onclick="selectIntroduction(this)">7月</button>
-            <button type="button" id="eightIntroduction" onclick="selectIntroduction(this)">8月</button>
-            <button type="button" id="nineIntroduction" onclick="selectIntroduction(this)">9月</button>
-            <button type="button" id="tenIntroduction" onclick="selectIntroduction(this)">10月</button>
-            <button type="button" id="elevenIntroduction" onclick="selectIntroduction(this)">11月</button>
-            <button type="button" id="twelveIntroduction" onclick="selectIntroduction(this)">12月</button>
+            <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
+            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ケア(過去施術) </button>
+            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
+            <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">スカルプチャー(過去施術) </button>
+            <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">ジェルネイル(過去施術) </button>
+            <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">フット(過去施術) </button>
+            <button type="button" id="sevenIntroduction" onclick="selectIntroduction(this)">その他(過去施術) </button>
         </div>
 
-        <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
+        <div class="label">薬品/ネイルでのアレルギー</div>
+        <div class="delivery-buttons">
+            <button type="button" id="onedelivery" onclick="selectdelivery(this)">薬品アレルギー有り</button>
+            <button type="button" id="twodelivery" onclick="selectdelivery(this)">薬品アレルギー無し</button>
+        </div>
+
+        <div class="label">現在補強または長さ出ししている箇所がある方は、<br>左右それぞれの本数をご記入ください。<br>(分かる範囲で結構です)</div>
+        <textarea id="message8" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">重要項目の同意</div>
+        <div class="info-text">①トークでのご予約の受付・変更・キャンセルについては承っておりません。全てTELにてお願いいたします😊✨ 
+            <br><br>②当店では施術後の返金対応は致しかねます。気になる箇所がございましたら、お直しは施術後１週間以内のご来店ですと無料(※１週間超えてのご来店ですと本数分計算の有料)で承っておりますのでお気軽にご相談ください。<br>お問い合わせに関しましては、トークに詳細と合わせ状態のお写真なども添えていただけるとスムーズなやり取りとご案内ができます。<br>また、TELでも承っており、その場でのご案内が可能です。
+            <br>※トークの場合、施術対応中などでご返信が遅くなることがございます。
+            <br><br>③お持ち込みネイルのお問い合わせに関しましては、リピーター様のみ受付ており、全てこちらのLINEにてご対応させて頂きます。 ご予約される前にこちらのLINEに持ち込みデザイン画像とご要望の送信をお願い致します。持ち込みデザインについてのご相談をさせていただきます。また、施術にかかるお時間、料金、ご予約時選択するメニュー等なども合わせてご連絡させていただきます。 
+            <br><br>④LINEお問い合わせのご対応時間について 営業時間中の10:00〜20:00とさせていただきます。 それ以外の時間のご返信は致しかねますことご了承を願います。 また、営業時間中につきましても施術対応中などにより返信が遅くなる場合がありますことも重ねてご了承を願います。</div>
+        <div class="budgety-buttons">
+            <button type="button" id="onebudgety" onclick="selectbudgety(this)">同意する</button>
+            <button type="button" id="twobudgety" onclick="selectbudgety(this)">同意しない</button>
+        </div>
+
+        <button class="submit-button" onclick="submitForm()">カウンセリングシート送信</button> <!-- フォーム送信ボタン -->
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script> <!-- LIFF SDKの読み込み -->
     <script>
         let priorityCount = '';
+        let demandCount = '';
         let chanceCount = '';
         let IntroductionCount = '';
+        let deliveryCount = '';
+        let budgetyCount = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
@@ -341,6 +388,16 @@
             priorityCount = element.innerText;
         }
 
+        function selectdemand(element) {
+            // 単一選択項目の処理コード
+            const buttons = document.querySelectorAll('.demand-buttons button');
+            buttons.forEach(button => button.classList.remove('active'));
+
+            // 選択されたボタンだけにactiveクラスを追加
+            element.classList.add('active');
+            demandCount = element.innerText;
+        }
+
         function selectchance(element) {
             // 単一選択項目の処理コード
             const buttons = document.querySelectorAll('.chance-buttons button');
@@ -361,57 +418,144 @@
             IntroductionCount = element.innerText;
         }
 
+        function selectdelivery(element) {
+            // 単一選択項目の処理コード
+            const buttons = document.querySelectorAll('.delivery-buttons button');
+            buttons.forEach(button => button.classList.remove('active'));
+
+            // 選択されたボタンだけにactiveクラスを追加
+            element.classList.add('active');
+            deliveryCount = element.innerText;
+        }
+
+        function selectbudgety(element) {
+            // 単一選択項目の処理コード
+            const buttons = document.querySelectorAll('.budgety-buttons button');
+            buttons.forEach(button => button.classList.remove('active'));
+
+            // 選択されたボタンだけにactiveクラスを追加
+            element.classList.add('active');
+            budgetyCount = element.innerText;
+        }
+
         function submitForm() {
             const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
+            const message3 = document.getElementById('message3').value;
+            const message4 = document.getElementById('message4').value;
+            const message5 = document.getElementById('message5').value;
+            const message6 = document.getElementById('message6').value;
+            const message7 = document.getElementById('message7').value;
+            const message8 = document.getElementById('message8').value;
             priorityCount: priorityCount;
+            demandCount: demandCount;
             chanceCount: chanceCount;
             IntroductionCount: IntroductionCount;
+            deliveryCount: deliveryCount;
+            budgetyCount: budgetyCount;
 
             const formData = {
                 message,
                 message2,
+                message3,
+                message4,
+                message5,
+                message6,
+                message7,
+                message8,
                 priorityCount,
+                demandCount,
                 chanceCount,
                 IntroductionCount,
+                deliveryCount,
+                budgetyCount,
             };
+
+    // 「同意しない」が選択されていたら警告を表示して中止
+    if (budgetyCount === "同意しない") {
+        alert('"同意する"を選択されていない場合、送信することができません');
+        return;
+    }
 
             // フォームデータのチェック
             if (!formData.message) {
-                alert('お名前(漢字フルネーム)を入力してください。');
+                alert('ご来店日を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.message2) {
+                alert('お名前(漢字フルネーム)を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message6) {
                 alert('お名前(ふりがな)を入力してください。');
                 return;
             }
 
+            // フォームデータのチェック
+            if (!formData.message3) {
+                alert('生年月日を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message4) {
+                alert('電話番号を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message5) {
+                alert('お住まいを入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
             if (!formData.priorityCount) {
-                alert('県内or県外');
+                alert('ご職業をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.demandCount) {
+                alert('来店動機をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.chanceCount) {
-                alert('性別を教えてください');
+                alert('来店頻度をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.IntroductionCount) {
-                alert('誕生月を教えてください');
+                alert('過去施術をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.deliveryCount) {
+                alert('薬品/ネイルでのアレルギーをご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.budgetyCount) {
+                alert('重要項目の同意をご選択ください。');
                 return;
             }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪南星アンケート≫\n【お名前(漢字フルネーム)】\n・${formData.message}\n\n【お名前(ふりがな)】\n・${formData.message2}\n\n【県内or県外】\n・${formData.priorityCount}\n\n【性別を教えてください】\n・${formData.chanceCount}\n\n【誕生月を教えてください】\n・${formData.IntroductionCount}`
+                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字)】\n・${formData.message2}\n\n【お名前(ふりがな)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【電話番号】\n・${formData.message4}\n\n【お住まい】\n・${formData.message5}\n\n【ご職業】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【知人の紹介名】\n・${formData.message7}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('アンケートの回答ありがとうございます❣️');
+                alert('カウンセリングシートのご記入と、重要事項へのご同意、ありがとうございました。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
